--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223"><a href="https://www.linkedin.com/in/andrew-yoo-5a5559182/" target="_blank">Andrew B. Yoo</a> (MS 2021, <a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>, co-advised by Prof. <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a>, thesis) &rarr; Whova (Infra)</p>
-				  <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a> (PhD student, co-advised by Prof. <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>), switched to the NLP area in 2021</p>
-				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a> (MCS 2020, <a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</a></p>
-				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a> (MS 2020, <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a>, <a href="https://www.ideals.illinois.edu/handle/2142/108029" target="_blank">thesis</a>, ) &rarr; Facebook (AI Infra) </p>
-				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a> (MS 2019, <a href="https://www.ideals.illinois.edu/handle/2142/106384" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/andrew-yoo-5a5559182/" target="_blank">Andrew B. Yoo</a>, MS 2021 (thesis), co-advised by Prof. <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a>, <a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Whova (Infra)</p>
+				  <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a>, PhD student, co-advised by Prof. <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>, switched to the NLP area in 2021</p>
+				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</a></p>
+				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a>, MS 2020 (<a href="https://www.ideals.illinois.edu/handle/2142/108029" target="_blank">thesis</a>), <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Facebook (AI Infra) </p>
+				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="https://www.ideals.illinois.edu/handle/2142/106384" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
 				  <p class="STYLE223"><a href="thesis_committee.html" target="_blank">Thesis Committees</a></p>
                              </TD>
                           </TR>
