--- a/pub.html
+++ b/pub.html
@@ -228,6 +228,8 @@ td.papers {
 						In Proceedings of the 2020 ACM SIGMETRICS Conference (<font color="#083b89"><b>Sigmetrics'20</b></font>), Virtual Event, June 2020.
 						<br>
 						Code: <a href="https://github.com/hckuo/Cozart" target="_blank">cozart</a>
+						<br>
+						<font color="#C40233"><b>Cozart is selected for the CACM Research Highlight.</b></font>
 					</span>
 				</div>
 		</td>
