--- a/pub.html
+++ b/pub.html
@@ -229,7 +229,7 @@ td.papers {
 						<br>
 						Code: <a href="https://github.com/hckuo/Cozart" target="_blank">cozart</a>
 						<br>
-						<font color="#C40233"><b>Cozart is selected for the CACM Research Highlight.</b></font>
+						<font color="#C40233"><b>Cozart is selected by the CACM Research Highlights.</b></font>
 					</span>
 				</div>
 		</td>
