--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -79,7 +79,79 @@ td.papers {
       </font>
     </td>
   <tr>
-
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="https://saurabhjha1.github.io/" target="_blank">Saurabh Jha</a></strong>
+            <br>
+            Machine Learning For Achieving Dependability in Mission-Criticial Systems
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
+            <br>
+            Advisor: <a href="https://ece.illinois.edu/about/directory/faculty/rkiyer" target="_blank">Ravishankar K. Iyer</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="http://mir.cs.illinois.edu/winglam/" target="_blank">Wing Lam</a></strong>
+            <br>
+            Software Testing in a Non-Deterministic World
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
+            <br>
+            Advisors: <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> and <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="https://sites.google.com/view/ali-kheradmand" target="_blank">Ali Kheradmand</a></strong>
+            <br>
+            Foundations for Practical Network Verification
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
+            <br>
+            Advisors: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a> and <a href="https://fsl.cs.illinois.edu/people/grigore-rosu/" target="_blank">Grigore Roşu</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="https://osl.cs.illinois.edu/members/sandur.html" target="_blank">Atul Sandur</a></strong>
+            <br>
+		    Scalable Resource Management for Internet-of-things (IoT) applications: Challenges, Methods and Tools
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
+            <br>
+            Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
   <tr>
     <td class="date"><font color="#083b89"></font></td>
       <td class="papers">
