--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 
 	             <TD width="0.5%">&nbsp;</TD>
                           <TR>
-                          <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ sudo cat alumni</b></span></TD>
+                          <TD height="30" colSpan=3 class=content_title><span style="margin-top: 5px; margin-bottom: 5px"><span class="style121"><A name=review id="review"></A></span><b>$ sudo cat alumni  # (<a href="thesis_committee.html" target="_blank">PhD Committees</a>)</b></span></TD>
                           </TR>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
@@ -467,7 +467,6 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</a></p>
 				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a>, MS 2020 (<a href="https://www.ideals.illinois.edu/handle/2142/108029" target="_blank">thesis</a>), <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Facebook (AI Infra) </p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="https://www.ideals.illinois.edu/handle/2142/106384" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
-				  <p class="STYLE223"><a href="thesis_committee.html" target="_blank">Thesis Committees</a></p>
                              </TD>
                           </TR>
 
