--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -88,7 +88,7 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://saurabhjha1.github.io/" target="_blank">Saurabh Jha</a></strong>
             <br>
-            Machine Learning For Achieving Dependability in Mission-Criticial Systems
+            Machine Learning For Achieving Dependability in Mission-Critical Systems
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
             <br>
