--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 	            <a href="https://2021.eurosys.org/" target="_blank">EuroSys (sponsorship co-chair)</a>,
                     <a href="https://conf.researchr.org/home/icse-2021" target="_blank">ICSE</a>,
 	            <a href="http://www.sigmetrics.org/sigmetrics2021/call_for_src.html" target="_blank">Sigmetrics SRC</a>,
-		    <a href="https://sosp2021.mpi-sws.org/" target="_blank">SOSP (Virtual Platform Chair)</a>,
+		    <a href="https://sosp2021.mpi-sws.org/" target="_blank">SOSP (virtual platform chair)</a>,
           	  </p>
                   <p class="STYLE223">2020
 		    <a href="https://www.usenix.org/conference/osdi20" target="_blank">OSDI</a>,
