--- a/pub.html
+++ b/pub.html
@@ -77,7 +77,7 @@ td.papers {
 		  </td>
 	</tr>
 	<tr>
-		<td class="date"><font color="#083b89">HotOS-XVIII</font></td>
+		<td class="date"><font color="#083b89">HotOS'21</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
 					  <p></p>
@@ -92,7 +92,7 @@ td.papers {
 		  </td>
 	</tr>
         <tr>
-		<td class="date"><font color="#083b89">HotOS-XVIII</font></td>
+		<td class="date"><font color="#083b89">HotOS'21</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
 					  <p></p>
