--- a/travel.html
+++ b/travel.html
@@ -377,6 +377,7 @@ div.Section1
 						     <li>Elko, NV (2018) </li>
 						     <li>Farmington, PA (2013) </li>
 					             <li>Fremont, CA (2017-2018) </li>
+						     <li>Indianapolis, IN (2021) </li>  
 						     <li>Irvine, CA (2016) </li>
 						     <li>Keystone, SD (2018) </li>
 						     <li>Lake Tahoe (north &amp; south), CA / NV (2018) </li>
