--- a/pub.html
+++ b/pub.html
@@ -82,7 +82,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Reasoning about modern datacenter infrastructures using partial histories </strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <strong>Reasoning about modern datacenter infrastructures using partial histories </strong> [<a href="pub/sieve.pdf" target="_blank">pdf</a> | <a href="pub/sieve_bib.txt" target="_blank">bib</a>]
 						  <br>
 						      Xudong Sun, Lalith Suresh, Aishwarya Ganesan, Ramnatthan Alagappan, Michael Gasch, Lilia Tang, and Tianyin Xu
 						  <br>
@@ -97,7 +97,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Fail-slow fault tolerance needs programming support </strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <strong>Fail-slow fault tolerance needs programming support </strong> [<a href="pub/depfast.pdf" target="_blank">pdf</a> | <a href="pub/depfast_bib.txt" target="_blank">bib</a>]
 						  <br>
 						    Andrew Yoo, Yuanli Wang, Ritesh Sinha, Shuai Mu, and Tianyin Xu
 						  <br>
