--- a/index.html
+++ b/index.html
@@ -448,11 +448,12 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="#E84A27">3M Foundation Fellowship</font>)</p>
-                                  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
 				  <p class="STYLE223">Jack Chen</p>
-				  <p class="STYLE223">Lilia Tang (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a>)</p>
 				  <p class="STYLE223">Jinghao Jia (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>)</p>
+				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a></p>
+				  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
+				  <p class="STYLE223">Lilia Tang (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a>)</p>
+				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="#E84A27">3M Foundation Fellowship</font>)</p>
 				  <p class="STYLE223">YiFei Zhu</p>
                              </TD>
                           </TR>
