--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223">UIUC, Facebook, Azure, GCP, GitHub, IBM, and NSF</p>
+				  <p class="STYLE223">UIUC, Facebook, Azure, GCP, GitHub, IBM/C3SR, and NSF</p>
                              </TD>
                          </TR>
 			      
