--- a/pub.html
+++ b/pub.html
@@ -87,6 +87,8 @@ td.papers {
 						      Xudong Sun, Lalith Suresh, Aishwarya Ganesan, Ramnatthan Alagappan, Michael Gasch, Lilia Tang, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 18th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XVIII</b></font>), Virtual Event, May 2021.
+					          <br>
+						  Code and data: <a href="https://github.com/xlab-uiuc/ctest_prio_art" target="_blank">ctest_prio</a>
 					  </span>
 				  </div>
 		  </td>
