--- a/index.html
+++ b/index.html
@@ -381,7 +381,14 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
-		        <p class="STYLE223">Draco has been upstreamed to the Linux kernel (<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">RFC</a>, <a href="https://github.com/torvalds/linux/search?p=1&q=yifei+seccomp&type=commits" target="_blank">code</a>) (<a href="https://lwn.net/Articles/834785/" target="_blank">LWN</a>, <a href="https://csl.illinois.edu/news/38131" target="_blank">CSL</a>, <a href="https://www.c3sr.com/post/2021/20210214_draco/" target="_blank">C3SR</a>, <a href="https://www.phoronix.com/scan.php?page=news_item&px=Linux-5.11-SECCOMP-Performance" target="_blank">Phoronix</a>)</p>
+		        <p class="STYLE223">Draco has been upstreamed to the Linux kernel 
+				(<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">RFC</a>, 
+				 <a href="https://github.com/torvalds/linux/search?p=1&q=yifei+seccomp&type=commits" target="_blank">code</a>) 
+				(<a href="https://lwn.net/Articles/834785/" target="_blank">LWN</a>, 
+				 <a href="https://csl.illinois.edu/news/38131" target="_blank">CSL</a>, 
+				 <a href="https://cs.illinois.edu/news/c3sr-researchers-find-real-world-impact-from-architecture-research-operating-system-security-innovation" target="_blank">IllinoisCS</a>, 
+				 <a href="https://www.c3sr.com/post/2021/20210214_draco/" target="_blank">C3SR</a>, 
+				 <a href="https://www.phoronix.com/scan.php?page=news_item&px=Linux-5.11-SECCOMP-Performance" target="_blank">Phoronix</a>)</p>
 			<p class="STYLE223">Elastic cuckoo page table is selected as IEEE Micro Top Picks Honorable Mention</p>
 		        <p class="STYLE223"><a href="https://cs.illinois.edu/news/asplos-best-paper-award-spurs-research-redesign-speed-address-translation" target="_blank">Illinois CS News on Elastic Cuckoo Page Tables</a></p>	  
                         <p class="STYLE223">Defusing the Configuration Time Bomb (<a href="https://www.youtube.com/watch?v=NjqRi-cF3-g&t=3m20s" target="_blank">video</a>) (<a href="https://leifwickland.github.io/presentations/configBomb/#16" target="_blank">slides</a>)</p>
