--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
-		        <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei is spotlighted by ECE news.</a></p>
+		        <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei is spotlighted by ECE news</a></p>
 		        <p class="STYLE223">Draco has been upstreamed to the Linux kernel 
 				(<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">RFC</a>, 
 				 <a href="https://github.com/torvalds/linux/search?p=1&q=yifei+seccomp&type=commits" target="_blank">code</a>) 
