camera ready for ctest prio

--- a/pub.html
+++ b/pub.html
@@ -67,7 +67,7 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					  <p></p>
 						  <span style="font-size: 12pt;">
-						  <strong>Test-Case Prioritization for Configuration Testing</strong> [<a href="pub/tbd.pdf" target="_blank">pdf</a> | <a href="pub/tbd.txt" target="_blank">bib</a>]
+						  <strong>Test-Case Prioritization for Configuration Testing</strong> [<a href="pub/ctest-prio.pdf" target="_blank">pdf</a> | <a href="pub/ctest-prio_bib.txt" target="_blank">bib</a>]
 						  <br>
 						      Runxiang Cheng, Lingming Zhang, Darko Marinov, and Tianyin Xu
 						  <br>
