--- a/pub.html
+++ b/pub.html
@@ -211,7 +211,12 @@ td.papers {
 						<br>
 						In Proceedings of the 53rd IEEE/ACM International Symposium on Microarchitecture (<font color="#083b89"><b>MICRO-53</b></font>), Virtual Event, Oct. 2020.
 						<br>
-						<font color="#C40233"><b>Draco has been upstreamed to the Linux kernel</b></font> [<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">rfc</a> | <a href="https://github.com/torvalds/linux/search?p=1&q=yifei+seccomp&type=commits" target="_blank">code</a>] (<a href="https://lwn.net/Articles/834785/" target="_blank">LWN</a>, <a href="https://www.phoronix.com/scan.php?page=news_item&px=Linux-5.11-SECCOMP-Performance" target="_blank">Phoronix</a>)
+						<font color="#C40233"><b>Draco has been upstreamed to the Linux kernel</b></font> [<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">rfc</a> | <a href="https://github.com/torvalds/linux/search?p=1&q=yifei+seccomp&type=commits" target="_blank">code</a>] 
+							(<a href="https://lwn.net/Articles/834785/" target="_blank">LWN</a>, 
+							 <a href="https://csl.illinois.edu/news/38131" target="_blank">CSL</a>, 
+				                         <a href="https://cs.illinois.edu/news/c3sr-researchers-find-real-world-impact-from-architecture-research-operating-system-security-innovation" target="_blank">IllinoisCS</a>, 
+				                         <a href="https://www.c3sr.com/post/2021/20210214_draco/" target="_blank">C3SR</a>, 
+							 <a href="https://www.phoronix.com/scan.php?page=news_item&px=Linux-5.11-SECCOMP-Performance" target="_blank">Phoronix</a>)
 					</span>
 				</div>
 		</td>
@@ -231,7 +236,7 @@ td.papers {
 						<br>
 						Code: <a href="https://github.com/hckuo/Cozart" target="_blank">cozart</a>
 						<br>
-						<font color="#C40233"><b>Cozart is selected by the CACM Research Highlights.</b></font>
+						<font color="#C40233"><b>Cozart is selected as a CACM Research Highlight.</b></font>
 					</span>
 				</div>
 		</td>
