--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,6 +86,38 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+            <strong><a href="https://hckuo.github.io" target="_blank">Hsuan-Chi (Austin) Kuo</a></strong>
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign
+            <br>
+            Advisor: <a href="https://sibin.github.io/sibin" target="_blank">Sibin Mohan</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	 
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong>Zhe Yang</strong>
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign
+            <br>
+            Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
             <strong><a href="https://saurabhjha1.github.io/" target="_blank">Saurabh Jha</a></strong>
             <br>
             Machine Learning For Achieving Dependability in Mission-Critical Systems
