--- a/pub.html
+++ b/pub.html
@@ -62,6 +62,22 @@ td.papers {
   <tbody>
 	  
 	<tr>
+		<td class="date"><font color="#083b89">FSE'21</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Vet: Identifying and Avoiding UI Exploration Tarpits</strong> [<a href="pub/vet.pdf" target="_blank">pdf</a> | <a href="pub/vet_bib.txt" target="_blank">bib</a>]
+						  <br>
+						      Wenyu Wang, Wei Yang, Tianyin Xu, and Tao Xie
+						  <br>
+						  In Proceedings of the 2021 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'21</b></font>), Virtual Event, August 2021.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+	  
+	<tr>
 		<td class="date"><font color="#083b89">ISSTA'21</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
@@ -78,6 +94,7 @@ td.papers {
 				  </div>
 		  </td>
 	</tr>
+	  
 	<tr>
 		<td class="date"><font color="#083b89">HotOS'21</font></td>
 			<td class="papers">
