--- a/index.html
+++ b/index.html
@@ -381,9 +381,10 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
-		        <p class="STYLE223">YiFei is spotlighted by both ECE and CS news 
-				(<a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">ECE news</a>,
-				 <a href="https://cs.illinois.edu/news/passion-operating-systems-illinois-undergraduate-contributions-linux" target="_blank">CS news</a>)
+		        <p class="STYLE223">YiFei is spotlighted by both
+				 <a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">ECE news</a>
+				 and
+				 <a href="https://cs.illinois.edu/news/passion-operating-systems-illinois-undergraduate-contributions-linux" target="_blank">CS news</a>
 			</p>
 		        <p class="STYLE223">Draco has been upstreamed to the Linux kernel 
 				(<a href="https://lore.kernel.org/bpf/cover.1602431034.git.yifeifz2@illinois.edu/" target="_blank">RFC</a>, 
