--- a/pub.html
+++ b/pub.html
@@ -87,7 +87,7 @@ td.papers {
 						  <br>
 						      Yang Li, Hao Lin, Zhenhua Li, Liangyi Gong, Feng Qian, Yunhao Liu, Xianlong Xin, and Tianyin Xu
 						  <br>
-						  In Proceedings of the 2020 Annual Conference of the ACM Special Interest Group on Data Communication (<font color="#083b89"><b>SIGCOMM'21</b></font>), Virtual Event, August 2021.
+						  In Proceedings of the 2020 Annual Conference of the ACM Special Interest Group on Data Communication (<font color="#083b89"><b>Sigcomm'21</b></font>), Virtual Event, August 2021.
 					  </span>
 				  </div>
 		  </td>
