--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -197,6 +197,8 @@ td.papers {
             Department of Computer Science, University of Illinois at Urbana-Champaign, defended in August 2020.
             <br>
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
+	    <br>
+	    <font color="#C40233"><b>ACM SIGARCH - IEEE CS TCCA Outstanding Dissertation Award</b></font>
           </span>
         </div>
       </td>
