--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -198,7 +198,7 @@ td.papers {
             <br>
             Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
 	    <br>
-	    <font color="#C40233"><b>ACM SIGARCH - IEEE CS TCCA Outstanding Dissertation Award</b></font>
+	    <font color="#C40233"><b>ACM SIGARCH - IEEE-CS TCCA Outstanding Dissertation Award</b></font>
           </span>
         </div>
       </td>
