--- a/pub.html
+++ b/pub.html
@@ -106,6 +106,8 @@ td.papers {
 						  In Proceedings of the 30th ACM SIGSOFT International Symposium on Software Testing and Analysis (<font color="#083b89"><b>ISSTA'21</b></font>), Virtual Event, July 2021.
 					          <br>
 						  Code and data: <a href="https://github.com/xlab-uiuc/ctest_prio_art" target="_blank">ctest_prio</a>
+						  <br>
+						  <font color="#C40233"><b>SIGSOFT Distinguished Paper Award</b></font>
 					  </span>
 				  </div>
 		  </td>
