--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -136,24 +136,6 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="http://mir.cs.illinois.edu/winglam/" target="_blank">Wing Lam</a></strong>
-            <br>
-            Software Testing in a Non-Deterministic World
-            <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
-            <br>
-            Advisors: <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> and <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>
-          </span>
-        </div>
-      </td>
-  </tr>
-	  
-  <tr>
-    <td class="date"><font color="#083b89"></font></td>
-      <td class="papers">
-        <div align="justify" class="STYLE4">
-          <p></p>
-            <span style="font-size: 12pt;">
             <strong><a href="https://sites.google.com/view/ali-kheradmand" target="_blank">Ali Kheradmand</a></strong>
             <br>
             Foundations for Practical Network Verification
@@ -183,6 +165,24 @@ td.papers {
         </div>
       </td>
   </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="http://mir.cs.illinois.edu/winglam/" target="_blank">Wing Lam</a></strong>
+            <br>
+            Software Testing in a Non-Deterministic World
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in June 2021.
+            <br>
+            Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>
+          </span>
+        </div>
+      </td>
+  </tr>  
 	  
   <tr>
     <td class="date"><font color="#083b89"></font></td>
