--- a/index.html
+++ b/index.html
@@ -464,10 +464,12 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
 				  <p class="STYLE223">Jack Chen</p>
+				  <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a>, PhD student, co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 				  <p class="STYLE223">Jinghao Jia (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>)</p>
 				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a></p>
 				  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
 				  <p class="STYLE223">Lilia Tang (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a>)</p>
+                                  <p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a></p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="#E84A27">3M Foundation Fellowship</font>)</p>
                              </TD>
                           </TR>
@@ -481,7 +483,6 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                               <TD class=content width="96%">
 				  <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei Zhu</a>, BS 2021 (<a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a>) &rarr; Google (kernel)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/andrew-yoo-5a5559182/" target="_blank">Andrew B. Yoo</a>, MS 2021 (thesis), co-advised by <a href="http://mpaxos.com/" target="_blank">Shuai Mu</a>, <a href="https://cs.illinois.edu/news/five-cs-graduate-students-2021-siebel-scholars" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Whova (Infra)</p>
-				  <p class="STYLE223"><a href="https://sampalomad.github.io/" target="_blank">Sam Cheng</a>, PhD student, co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>, switched to the NLP area in 2021</p>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</a></p>
 				  <p class="STYLE223"><a href="https://chenqingrong.github.io/" target="_blank">Qingrong Chen</a>, MS 2020 (<a href="https://www.ideals.illinois.edu/handle/2142/108029" target="_blank">thesis</a>), <a href="http://www.cs.illinois.edu/news/meet-siebel-scholars-class-2020" target="_blank"><font color="#E84A27">Siebel Scholar</font></a> &rarr; Facebook (AI Infra) </p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="https://www.ideals.illinois.edu/handle/2142/106384" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
