--- a/pub.html
+++ b/pub.html
@@ -72,6 +72,8 @@ td.papers {
 						      Wenyu Wang, Wei Yang, Tianyin Xu, and Tao Xie
 						  <br>
 						  In Proceedings of the 2021 ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'21</b></font>), Virtual Event, August 2021.
+						  <br>
+						  <font color="#C40233"><b>SIGSOFT Distinguished Paper Award</b></font>
 					  </span>
 				  </div>
 		  </td>
