--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -156,7 +156,7 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://osl.cs.illinois.edu/members/sandur.html" target="_blank">Atul Sandur</a></strong>
             <br>
-		    Scalable Resource Management for Internet-of-things (IoT) applications: Challenges, Methods and Tools
+		    Scalable Resource Management for Internet-of-things (IoT) Applications: Challenges, Methods and Tools
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
             <br>
