--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ ol { padding-left: 1.5em; }
 
 <a href="https://cs.illinois.edu/", target="_blank">Department of Computer Science</a>
 <a href="https://illinois.edu/", target="_blank">University of Illinois at Urbana-Champaign</a>
-4108 Siebel Center (<a href="https://cs.illinois.edu/contact-us/directions-siebel-center", target="_blank">direction</a>)
+4108 Siebel Center (<a href="https://cs.illinois.edu/about/contact-us", target="_blank">direction</a>)
 tyxu at illinois dot edu || <a href="https://twitter.com/tianyin_xu", target="_blank">@tianyin_xu</a> (<a href="https://twitter.com/FSEconf/status/1412086096901644292", target="_blank">huh?</a>)
 
 Assistant: Madeleine Garvey
