--- a/pub.html
+++ b/pub.html
@@ -381,7 +381,7 @@ td.papers {
 				<div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						<strong>A Large-Scale Study of Data Center Network Reliability </strong> [<a href="pub/imc18.pdf" target="_blank">pdf</a> | <a href="pub/imc18_bib.txt" target="_blank">bib</a>]
+						<strong>A Large-Scale Study of Data Center Network Reliability </strong> [<a href="pub/network_reliability.pdf" target="_blank">pdf</a> | <a href="pub/network_reliability_bib.txt" target="_blank">bib</a>]
 						<br>
 						Justin Meza, Tianyin Xu, Kaushik Veeraraghavan, and Onur Mutlu
 						<br>
