--- a/pub.html
+++ b/pub.html
@@ -92,6 +92,8 @@ td.papers {
 						  In Proceedings of the 2020 Annual Conference of the ACM Special Interest Group on Data Communication (<font color="#083b89"><b>Sigcomm'21</b></font>), Virtual Event, August 2021.
 					          <br>
 						  Code and sample data: <a href="https://cellularreliability.github.io/" target="_blank">Android-MOD</a>
+                                                  <br>
+                                                  <a href="pub/cellular_reliability_public_review.pdf" target="_blank">Public review</a>
 					  </span>
 				  </div>
 		  </td>
