--- a/index.html
+++ b/index.html
@@ -277,6 +277,8 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 		<b>$ echo <font color="#E84A27">"Please consider submitting your work to <a href="https://escholarship.org/uc/jsys/about", target="_blank">JSys</a> (<a href="https://medium.com/@vijayc/a-new-journal-for-systems-research-2dbbfca6b860">Why JSys?</a>)"</font></b>
 		<br>
 		<b>$ echo <font color="#E84A27">"I co-organize <a href="https://systems-seminar-uiuc.github.io", target="_blank">UIUC Systems Reading Group</a> and <a href="https://wiki.illinois.edu/wiki/display/SoftEng", target="_blank">Software Engineering Seminar</a>."</font></b>
+		<br>
+		<b>$ echo <font color="#E84A27">"I am teaching <a href="https://cs523-uiuc.github.io/fall21/", target="_blank">CS 523 (Advanced OS)</a> in Fall'21!"</font></b>
 	        </TD>
                 </TR>
 		<TD width="0.5%">&nbsp;</TD>
