--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -136,13 +136,13 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://sites.google.com/view/ali-kheradmand" target="_blank">Ali Kheradmand</a></strong>
+            <strong><a href="https://osl.cs.illinois.edu/members/sandur.html" target="_blank">Atul Sandur</a></strong>
             <br>
-            Foundations for Practical Network Verification
-	    <br>
+		    Scalable Resource Management for Internet-of-things (IoT) Applications: Challenges, Methods and Tools
+            <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
             <br>
-            Advisors: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a> and <a href="https://fsl.cs.illinois.edu/people/grigore-rosu/" target="_blank">Grigore Roşu</a>
+            Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
           </span>
         </div>
       </td>
@@ -154,13 +154,13 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://osl.cs.illinois.edu/members/sandur.html" target="_blank">Atul Sandur</a></strong>
+            <strong><a href="https://sites.google.com/view/ali-kheradmand" target="_blank">Ali Kheradmand</a></strong>
             <br>
-		    Scalable Resource Management for Internet-of-things (IoT) Applications: Challenges, Methods and Tools
+            Foundations for Practical Network Verification
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in July 2021.
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
-            <br>
-            Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
+            Advisors: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a> and <a href="https://fsl.cs.illinois.edu/people/grigore-rosu/" target="_blank">Grigore Roşu</a>
           </span>
         </div>
       </td>
