--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -154,7 +154,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://sites.google.com/view/ali-kheradmand" target="_blank">Ali Kheradmand</a></strong>
+            <strong><a href="https://sites.google.com/view/ali-kheradmand" target="_blank">Ali Kheradmand</a></strong>, Ph.D.
             <br>
             Foundations for Practical Network Verification
 	    <br>
@@ -172,7 +172,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="http://mir.cs.illinois.edu/winglam/" target="_blank">Wing Lam</a></strong>
+            <strong><a href="http://mir.cs.illinois.edu/winglam/" target="_blank">Wing Lam</a></strong>, Ph.D.
             <br>
             Software Testing in a Non-Deterministic World
             <br>
