--- a/pub.html
+++ b/pub.html
@@ -130,6 +130,8 @@ td.papers {
 						      Xudong Sun, Lalith Suresh, Aishwarya Ganesan, Ramnatthan Alagappan, Michael Gasch, Lilia Tang, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 18th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XVIII</b></font>), Virtual Event, May 2021.
+						  <br>
+						  <font color="#C40233"><b>Selected to be presented at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-north-america/program/schedule/" target="_blank">KubeCon</a>.</b></font>
 					  </span>
 				  </div>
 		  </td>
