--- a/travel.html
+++ b/travel.html
@@ -366,11 +366,14 @@ div.Section1
 						     <li>Baltimore, MD (2017) </li>
 						     <li>Berkeley, CA (2015, 2018) </li>
 						     <li>Big Sur, CA (2017) </li>
+					             <li>Bloomington, IL (2020) </li>
+						     <li>Bloomington, IN (2021) </li>
                                                      <li>Boston, MA (2019) </li>
 						     <li>Broomfield, CO (2014) </li>
 						     <li>Carmel-by-the-Sea, CA (2017) </li>
 						     <li>Cheyenne, WY (2018) </li>
-                                                     <li>Chicago, IL (too many) </li>
+                                                     <li>Chicago, IL (many) </li>
+						     <li>Clarksville, TN (2021) </li>
 						     <li>Custer, SD (2018) </li>
 						     <li>Denver, CO (2017) </li>
 						     <li>Des Moines, IA (2018) </li>
@@ -380,9 +383,11 @@ div.Section1
 						     <li>Indianapolis, IN (2021) </li>  
 						     <li>Irvine, CA (2016) </li>
 						     <li>Keystone, SD (2018) </li>
-						     <li>Lake Tahoe (north &amp; south), CA / NV (2018) </li>
+						     <li>Lake Tahoe, CA / NV (2018) </li>
 						     <li>Laramie, WY (2018) </li>
+						     <li>Lexington, KY (2021) </li>
 						     <li>Los Angeles, CA (2012, 2016) </li>
+						     <li>Louisville, KY (2021) </li>
 					             <li>Marshall, IN (2020) </li>
 						     <li>Menlo Park, CA (2017-2018) </li>
 						     <li>Millbrae, CA (2018)</li>
@@ -400,10 +405,10 @@ div.Section1
 						     <li>Sacramento, CA (2018) </li>
 						     <li>Salt Lake City, CA (2018) </li>
 						     <li>San Diego, CA (2011-2017) </li>
-						     <li>San Francisco, CA (too many) </li>
-						     <li>San Jose, CA (too many) </li>
+						     <li>San Francisco, CA (many) </li>
+						     <li>San Jose, CA (many) </li>
 						     <li>Santa Barbara, CA (2017) </li>
-						     <li>Santa Clara, CA (too many) </li>
+						     <li>Santa Clara, CA (many) </li>
 						     <li>Santa Cruz, CA (2017) </li>
 						     <li>Santa Maria, CA (2017) </li>
 						     <li>Saratoga, CA (2018) </li>
@@ -413,6 +418,7 @@ div.Section1
 						     <li>Sioux Falls, SD (2018)</li>
 						     <li>Solvang, CA (2017) </li>
 						     <li>Springfield, IL (2019) </li>
+					             <li>St. Louis, MO (2021) </li>
 						     <li>State College, PA (2017) </li>
 						     <li>Sunnyvale, CA (2012, 2015) </li>
 						     <li>Urbana-Champaign, IL (2017)</li>
