--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
 				  <p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a></p>
+				  <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a></p>
 				  <p class="STYLE223">Yinfang Chen</p>
 				  <p class="STYLE223">Jinghao Jia (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>)</p>
 				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a></p>
