--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -111,6 +111,24 @@ td.papers {
         </div>
       </td>
   </tr>
+
+   <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
+            <strong><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a></strong>
+            <br>
+            Empowering Automated Mobile UI Testing In the Face of Real-world Complexities
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Apr. 2021.
+            <br>
+            Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="https://tianyin.github.io/" target="_blank">Tianyin Xu</a>
+          </span>
+        </div>
+      </td>
+  </tr>
 	  
   <tr>
     <td class="date"><font color="#083b89"></font></td>
@@ -138,7 +156,7 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://osl.cs.illinois.edu/members/sandur.html" target="_blank">Atul Sandur</a></strong>
             <br>
-		    Scalable Resource Management for Internet-of-things (IoT) Applications: Challenges, Methods and Tools
+		    Scalable Resource Management for Internet-of-Things (IoT) Applications: Challenges, Methods and Tools
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
             <br>
