--- a/pub.html
+++ b/pub.html
@@ -94,6 +94,8 @@ td.papers {
 						  Code and sample data: <a href="https://cellularreliability.github.io/" target="_blank">Android-MOD</a>
                                                   <br>
                                                   <a href="pub/cellular_reliability_public_review.pdf" target="_blank">Public review</a>
+					          <br>
+						  <font color="#C40233"><b>Best Student Paper Award</b></font>
 					  </span>
 				  </div>
 		  </td>
