--- a/pub.html
+++ b/pub.html
@@ -400,6 +400,38 @@ td.papers {
 			</div>
 		</td>
 	</tr>
+	  
+	<tr>
+    	<td class="date"><font color="#083b89">MobiSys'19</font></td>
+  		<td class="papers">
+			<div align="justify" class="STYLE4">
+				<p></p>
+					<span style="font-size: 12pt;">
+						<strong>Understanding Fileless Attacks on Linux-based IoT Devices with HoneyCloud</strong> [<a href="pub/honeycloud.pdf" target="_blank">pdf</a> | <a href="pub/honeycloud_bib.txt" target="_blank">bib</a>]
+						<br>
+            					Fan Dang, Zhenhua Li, Yunhao Liu, Ennan Zhai, Qi Alfred Chen, Tianyin Xu, Yan Chen, and Jingyu Yang
+						<br>
+						In Proceedings of the 17th ACM International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys'19</b></font>), Seoul, South Korea, Jun. 2019.
+					</span>
+			</div>
+		</td>
+	</tr>
+	  
+	<tr>
+    	<td class="date"><font color="#083b89">MobiSys'19</font></td>
+  		<td class="papers">
+			<div align="justify" class="STYLE4">
+				<p></p>
+					<span style="font-size: 12pt;">
+						<strong>An In-depth Study of Commercial MVNO: Measurement and Optimization</strong> [<a href="pub/mvno.pdf" target="_blank">pdf</a> | <a href="pub/mvno_bib.txt" target="_blank">bib</a>]
+						<br>
+            					Ao Xiao, Yunhao Liu, Yang Li, Feng Qian, Zhenhua Li, Sen Bai, Yao Liu, Tianyin Xu, and Xianlong Xin
+						<br>
+						In Proceedings of the 17th ACM International Conference on Mobile Systems, Applications, and Services (<font color="#083b89"><b>MobiSys'19</b></font>), Seoul, South Korea, Jun. 2019.
+					</span>
+			</div>
+		</td>
+	</tr>
 
 	<tr>
     	<td class="date"><font color="#083b89">IMC'18</font></td>
