--- a/index.html
+++ b/index.html
@@ -339,6 +339,11 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
+						        <p class="STYLE223">Fall 2021 <a href="https://cs523-uiuc.github.io/fall21/" target="_blank">CS 523: Advanced Operating Systems</a></p>
+						        <p class="STYLE223">Fall 2021 <a href="https://systems-seminar-uiuc.github.io/fall21/" target="_blank">CS 591(DS): System Reading Group</a></p>
+						        <p class="STYLE223">Fall 2021 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
+						        <p class="STYLE223">Spring 2021 <a href="https://systems-seminar-uiuc.github.io/spring21/" target="_blank">CS 591(IG): System Reading Group (together with Distributed System Seminar)</a></p>
+						        <p class="STYLE223">Spring 2021 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
 						        <p class="STYLE223">Fall 2020 <a href="https://cs523-uiuc.github.io/fall20/" target="_blank">CS 523: Advanced Operating Systems</a></p>
 						        <p class="STYLE223">Fall 2020 <a href="https://systems-seminar-uiuc.github.io/fall20/" target="_blank">CS 591(IG): System Reading Group (together with Distributed System Seminar)</a></p>
 						        <p class="STYLE223">Fall 2020 <a href="https://wiki.illinois.edu//wiki/display/SoftEng" target="_blank">CS 591(SE): Software Engineering Seminar</a></p>
@@ -467,6 +472,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
+				  <p class="STYLE223">Madhuparna Bhowmik, co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>
 				  <p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a></p>
 				  <p class="STYLE223">Yinfang Chen</p>
 				  <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a></p>
@@ -488,7 +494,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223">Jack Chen, MS 2021 (thesis)</p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/jianyanchen2aa899154/" target="_blank">Jack Chen</a>, MS 2021 (thesis)</p>
 				  <p class="STYLE223"><a href="https://ece.illinois.edu/newsroom/news/yifei-zhu" target="_blank">YiFei Zhu</a>, BS 2021 
 					  (<a href="https://ece.illinois.edu/admissions/why-ece/honors" target="_blank"><font color="#E84A27">Highest Honor</font></a>, 
 					   <a href="https://digital.library.illinois.edu/collections/81101fb0-e3fb-012f-c5b6-0019b9e633c5-5" target="_blank"><font color="#E84A27">University Honor</font></a>) &rarr; Google (kernel)</p>
