--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -104,6 +104,8 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong>Zhe Yang</strong>
             <br>
+            Soft Real Time Resource Management on Heterogeneous Architectures across Edge and Cloud for Visual Information
+            <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign
             <br>
             Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
