--- a/pub.html
+++ b/pub.html
@@ -62,6 +62,22 @@ td.papers {
   <tbody>
 	  
 	<tr>
+		<td class="date"><font color="#083b89">NDSS'22</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Forensic Analysis of Configuration-based Attacks</strong> [<a href="pub/dossier.pdf" target="_blank">pdf</a> | <a href="pub/dossier_bib.txt" target="_blank">bib</a>]
+						  <br>
+						      Muhammad Adil Inam, Wajih Ul Hassan, Ali Ahad, Adam Bates, Rashid Tahir, Tianyin Xu, and Fareed Zaffar
+						  <br>
+						  In Proceedings of the 29th Network and Distributed System Security Symposium (<font color="#083b89"><b>NDSS'22</b></font>), San Diego, CA, Feb. 2022.
+					  </span>
+				  </div>
+		  </td>
+	</tr>
+	  
+	<tr>
 		<td class="date"><font color="#083b89">OOPSLA'21</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
