--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -106,7 +106,7 @@ td.papers {
             <br>
             Soft Real Time Resource Management on Heterogeneous Architectures across Edge and Cloud for Visual Information
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed the thesis proposal in Sep. 2021.
             <br>
             Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
           </span>
