--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 				  <p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a></p>
 				  <p class="STYLE223">Lilia Tang (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a>)</p>
                                   <p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a></p>
-				  <p class="STYLE223">Shuai Wang</p>
+				  <p class="STYLE223">Shuai Wang, co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> (<font color="#E84A27">3M Foundation Fellowship</font>)</p>
                              </TD>
                           </TR>
