--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,6 +86,22 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+            <strong><a href="http://kokolis2.web.engr.illinois.edu/" target="_blank">Apostolos Kokolis</a></strong>
+            <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign
+            <br>
+            Advisor: <a href="http://iacoma.cs.uiuc.edu/josep/torrellas.html" target="_blank">Josep Torrellas</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
             <strong><a href="https://hckuo.github.io" target="_blank">Hsuan-Chi (Austin) Kuo</a></strong>
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign
