--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                               <TD class=content width="96%">
 				  <p class="STYLE223">Madhuparna Bhowmik, co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>
 				  <p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a></p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/kaihsun1996/" target="_blank">Kai-Hsun (Kevin) Chen</a></p>
 				  <p class="STYLE223">Yinfang Chen</p>
 				  <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a></p>
 				  <p class="STYLE223">Jinghao Jia (<a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>)</p>
