--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -154,31 +154,31 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://saurabhjha1.github.io/" target="_blank">Saurabh Jha</a></strong>
+            <strong><a href="https://osl.cs.illinois.edu/members/sandur.html" target="_blank">Atul Sandur</a></strong>
             <br>
-            Machine Learning For Achieving Dependability in Mission-Critical Systems
+                Scalable Resource Management for Internet-of-Things (IoT) Applications: Challenges, Methods and Tools
             <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
             <br>
-            Advisor: <a href="https://ece.illinois.edu/about/directory/faculty/rkiyer" target="_blank">Ravishankar K. Iyer</a>
+            Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
           </span>
         </div>
       </td>
   </tr>
-	  
+
   <tr>
     <td class="date"><font color="#083b89"></font></td>
       <td class="papers">
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://osl.cs.illinois.edu/members/sandur.html" target="_blank">Atul Sandur</a></strong>
+            <strong><a href="https://saurabhjha1.github.io/" target="_blank">Saurabh Jha</a></strong>
             <br>
-		    Scalable Resource Management for Internet-of-Things (IoT) Applications: Challenges, Methods and Tools
+                Machine Learning For Achieving Dependability in Mission-Critical Systems
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed proposal exam in in Nov. 2020.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended in in Oct. 2021.
             <br>
-            Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
+            Advisor: <a href="https://ece.illinois.edu/about/directory/faculty/rkiyer" target="_blank">Ravishankar K. Iyer</a>
           </span>
         </div>
       </td>
