--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223">UIUC, Facebook, Azure, GCP, GitHub, IBM/C3SR/IIDAI, and NSF</p>
+				  <p class="STYLE223">Illinois CS, <a href="https://undergradresearch.illinois.edu/" target="_blank">OUR</a>, Facebook, Azure, GCP, GitHub, IBM/C3SR/IIDAI, and NSF</p>
                              </TD>
                          </TR>
 
@@ -525,7 +525,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
 			     <TR>
 				<TD class=content_title>&nbsp;</TD>
 			        <TD class=content width="96%">
-				  <p class="STYLE223"> soccer (<a href="football.html">career</a>); <a href="travel.html">travel</a>; <a href="https://www.youtube.com/watch?v=gAh9NRGNhUU">rock</a>; biking; drinking; reading; bad jokes; turtles</p>
+				  <p class="STYLE223"> soccer (<a href="football.html" target="_blank">career</a>); <a href="travel.html" target="_blank">travel</a>; <a href="https://www.youtube.com/watch?v=gAh9NRGNhUU" target="_blank">rock</a>; biking; drinking; reading; bad jokes; turtles</p>
 			        </TD>
 				<TD class=content_title>&nbsp;</TD>
 			 </TR>
