--- a/pub.html
+++ b/pub.html
@@ -165,7 +165,7 @@ td.papers {
 						  <br>
 						  In Proceedings of the 18th Workshop on Hot Topics in Operating Systems (<font color="#083b89"><b>HotOS-XVIII</b></font>), Virtual Event, May 2021.
 						  <br>
-						  <font color="#C40233">Selected to present at <a href="https://kccncna2021.sched.com/event/lV0S?iframe=no" target="_blank">KubeCon</a>.</font>
+						  <font color="#C40233"><b>Selected to present at <a href="https://kccncna2021.sched.com/event/lV0S?iframe=no" target="_blank">KubeCon</a>.</b></font>
 					  </span>
 				  </div>
 		  </td>
