--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ mgarvey at illinois dot edu, (217) 300-6342</span>
                           <TR>
                             <TD class=content_title>&nbsp;</TD>
                               <TD class=content width="96%">
-				  <p class="STYLE223">Illinois CS, <a href="https://undergradresearch.illinois.edu/" target="_blank">OUR</a>, Facebook, Azure, GCP, GitHub, IBM/C3SR/IIDAI, and NSF</p>
+				  <p class="STYLE223">Illinois CS, <a href="https://undergradresearch.illinois.edu/" target="_blank">OUR</a>, NSF, VMware, Facebook, IBM/C3SR/IIDAI, Azure, GCP, and GitHub</p>
                              </TD>
                          </TR>
 
